--- a/puppet/fileserver.conf
+++ b/puppet/fileserver.conf
@@ -40,5 +40,5 @@
 # If added to auth.conf BEFORE the "path /file" rule, the rule above
 # will add stricter restrictions to the extra_files mount point.
 [wodezoon]
-path /home/ubuntu
+path /home/sam
 allow *
